--- a/platformio.ini
+++ b/platformio.ini
@@ -4,10 +4,10 @@ board             = d1_mini
 framework         = arduino
 board_build.f_cpu = 160000000L
 upload_speed      = 1500000
-lib_deps          = https://github.com/m1cr0lab-espboy/ESPboy
-                    https://github.com/ESPboy-edu/ESPboy_Playtune
+lib_deps          = m1cr0lab/ESPboy @ ^1.2.0
                     pharap/FixedPoints @ ^1.1.0
                     jwrw/ESP_EEPROM @ ^2.1.1
+                    https://github.com/ESPboy-edu/ESPboy_Playtune
 
 ; ----------------------------------------------------------------------------
 ; Dino Game
